# yeis_talkbot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mcp.json  mypy.ini  pyproject.toml
.github/workflows/: pytest.yml
configs/: config.yaml  edge-tts.yaml
src/yeis_talkbot/asr/: FunASR.py  __init__.py  abc.py  asr_handler.py
src/yeis_talkbot/configs/: __init__.py  configs.py  tools_configs.py  tts_configs.py
src/yeis_talkbot/event/: __init__.py  bus.py  event.py
src/yeis_talkbot/server/: app.py
src/yeis_talkbot/tools/mcp/: __init__.py  mcp.py
src/yeis_talkbot/tools/rag/: __init__.py  abc.py  chroma.py
src/yeis_talkbot/tts/: __init__.py  abc.py  edge_tts.py  tts_handler.py
src/yeis_talkbot/types/: __init__.py  types.py
src/yeis_talkbot/vad/: SileroVAD.py  __init__.py  abc.py
tests/asr/: test_FunASR.py  test_FunASRStreaming.py
tests/configs/: test_configs.py
tests/event/: test_asr_event.py  test_tts_event.py
tests/tools/: test_mcp.py
tests/tts/: test_edge_tts.py
tests/vad/: test_SileroVAD.py
