[project]
name = "yeis-talkbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.0.2",
    "langchain-openai>=0.3.27",
    "langchain>=0.3.26",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "silero_vad>=5.1.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
]

[tool.setuptools.packages.find]
where = ["src"]

    [project.optional-dependencies]
    dev = [
        "mypy>=1.16.1",
        "ruff>=0.12.2"
    ]
    index-tts = [
        "indextts @ git+https://github.com/index-tts/index-tts.git"
    ]
    test = [
        "pytest-benchmark>=5.1.0",
        "pytest>=8.4.1"
    ]
