[project]
name = "yeis-talkbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.0.2",
    "funasr>=1.2.6",
    "langchain-openai>=0.3.27",
    "langchain>=0.3.26",
    "loguru>=0.7.3",
    "pyaudio>=0.2.14",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.1",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.1",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.1.9"
]

[tool.setuptools.packages.find]
where = ["src"]

    [project.optional-dependencies]
    dev = [
        "mypy>=1.16.1",
        "ruff>=0.12.2"
    ]
    index-tts = [
        "indextts @ git+https://github.com/index-tts/index-tts.git"
    ]
    test = [
        "pytest-benchmark>=5.1.0",
        "pytest>=8.4.1"
    ]

[tool.pylsp-mypy]
enabled = true

[tool.pyright]
reportPrivateUsage = "none"
reportProtectedAccess = "none" 
extraPaths = ["tests"]

[tool.pylint]
disable = [
    "protected-access",
    "W0212"
]
